# python-projects

GUI APP - TEXT RECOGNITON/: .gitignore  README.md  designer.py  main.py  pyproject.toml
GUI APP - TEXT RECOGNITON/Design_Files/: main.ui
GUI APP - TEXT RECOGNITON/Source/: Filter.py  filters_view.py  main_controller.py  main_model.py  main_view.py  mainwindow.py  segmentation.py  settings_view.py
GUI APP - TEXT RECOGNITON/Source/Filters/: Binarize.py  Blur.py  Contour.py  Detail.py  Dilate.py  EdgeEnhance.py  Emboss.py  Erode.py  GaussianBlur.py  Grayscale.py  Input.py  MaxFilter.py  Sepia.py  Sharpen.py  Smooth.py  UnsharpMask.py  __init__.py
GUI APP - TEXT RECOGNITON/Source/craft_text_detector/: __init__.py  craft_utils.py  file_utils.py  predict.py
GUI APP - TEXT RECOGNITON/Source/recognition/: EasyOCR.py  MGPSTR.py  PaddleOCR.py  TrOCR.py  recognition.py
GUI APP - TEXT RECOGNITON/Style/: stylesheet.qss
GUI APP - TEXT RECOGNITON/typings/icecream/: icecream.pyi
